tests/baselines/reference/discriminateObjectTypesOnly.errors.txt
tests/cases/compiler/discriminateObjectTypesOnly.ts(9,7): error TS2741: Property 'toFixed' is missing in type '{ toString: undefined; }' but required in type '{ toFixed: null; toString: undefined; }'.


==== tests/cases/compiler/discriminateObjectTypesOnly.ts (1 errors) ====
    type Thing = number | object;
    const k: Thing = { toFixed: null }; // OK, satisfies object
    
    type Thing2 = number | { toFixed: null } | object;
    const q: Thing2 = { toFixed: null };
    const h: Thing2 = { toString: null }; // OK, satisfies object
    
    type Thing3 = number | { toFixed: null, toString: undefined } | object;
    const l: Thing3 = { toString: undefined }; // error, toFixed isn't null
          ~
!!! error TS2741: Property 'toFixed' is missing in type '{ toString: undefined; }' but required in type '{ toFixed: null; toString: undefined; }'.
!!! related TS2728 tests/cases/compiler/discriminateObjectTypesOnly.ts:8:26: 'toFixed' is declared here.
    